Eliminate three (non-relevant) deprecation warnings.
[Refactor][Toolbox]